force-app/main/default/objects/Case/fields/Case_Owner_MB__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_MB__c</fullName>
    <label>Case Owner MB</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CMG - Order Management</fullName>
            </value>
            <value>
                <fullName>Switch Ops</fullName>
            </value>
            <value>
                <fullName>AAV Design</fullName>
            </value>
            <value>
                <fullName>Field Ops</fullName>
            </value>
            <value>
                <fullName>Data Delivery &amp; Support</fullName>
            </value>
            <value>
                <fullName>NOC Microwave &amp; VSAT</fullName>
            </value>
            <value>
                <fullName>National Transport Design</fullName>
            </value>
            <value>
                <fullName>Transport-Implementation</fullName>
            </value>
            <value>
                <fullName>IP SERVICES-NETWORK INTEGRITY</fullName>
            </value>
            <value>
                <fullName>Transport - TDM</fullName>
            </value>
            <value>
                <fullName>TRAFFIC ENGINEERING</fullName>
            </value>
            <value>
                <fullName>Core Translations Design</fullName>
            </value>
            <value>
                <fullName>Transport Eng Services- No On Call</fullName>
            </value>
            <value>
                <fullName>UC DevOps</fullName>
            </value>
            <value>
                <fullName>EIPT Retail</fullName>
            </value>
            <value>
                <fullName>EIS Operations Security Deployment</fullName>
            </value>
            <value>
                <fullName>NOC Retail Deployment</fullName>
            </value>
            <value>
                <fullName>Transport AAV Bandwidth Upgrades</fullName>
            </value>
            <value>
                <fullName>RAN Transport</fullName>
            </value>
            <value>
                <fullName>Tier 2 Operations Security Deployment</fullName>
            </value>
            <value>
                <fullName>SWOPS</fullName>
            </value>
            <value>
                <fullName>Enterprise Telecom</fullName>
            </value>
            <value>
                <fullName>EIS Security Deployment Retail</fullName>
            </value>
            <value>
                <fullName>EIPD - Engineering IP Deployment</fullName>
            </value>
            <value>
                <fullName>Transport AAV Bandwidth UpgradesRAN Transport</fullName>
            </value>
            <value>
                <fullName>Market</fullName>
            </value>
            <value>
                <fullName>OM</fullName>
            </value>
            <value>
                <fullName>OM Market</fullName>
            </value>
            <value>
                <fullName>OM Transport</fullName>
            </value>
            <value>
                <fullName>OM Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>