force-app/main/default/objects/Case/fields/Case_URL1__c.field-meta.xml
<CustomField>
    <fullName>Case_URL1__c</fullName>
    <formula>&quot;https://na59.salesforce.com/&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case URL</label>
    <type>Text</type>
</CustomField>