force-app/main/default/objects/Case/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <inlineHelpText>Assists with Reporting (shown in Intake Dashboard)

Clarification: 
Admin Support entails: security updates, assisting users (with anything SalesForce related, tutorials, changing settings for users, files etc).</inlineHelpText>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creation (Fields, Processes, WorkFlows)</fullName>
                <color>#0B6FCE</color>
                <label>Fields, Processes, WorkFlows</label>
            </value>
            <value>
                <fullName>Reports/Views</fullName>
                <color>#E27001</color>
                <label>Reports/Views/Dashboards</label>
            </value>
            <value>
                <fullName>SalesForce Improvements/Research</fullName>
                <color>#A845DC</color>
                <label>Research/Improvements</label>
            </value>
            <value>
                <fullName>Admin/User Assistance</fullName>
                <color>#F3D904</color>
                <label>Admin Support</label>
            </value>
            <value>
                <fullName>Request for Access</fullName>
            </value>
            <value>
                <fullName>ITR</fullName>
            </value>
            <value>
                <fullName>Market Request</fullName>
                <isActive>false</isActive>
                <label>Market Request</label>
            </value>
            <value>
                <fullName>Notification</fullName>
                <isActive>false</isActive>
                <label>Notification (BAS, LPTV)</label>
            </value>
            <value>
                <fullName>Notification (BAS, LPTV.)</fullName>
                <isActive>false</isActive>
                <label>Notification Related: LPTV/BAS</label>
            </value>
            <value>
                <fullName>Reports or Views</fullName>
                <isActive>false</isActive>
                <label>Reports/Views.</label>
            </value>
            <value>
                <fullName>STA</fullName>
                <isActive>false</isActive>
                <label>STA</label>
            </value>
            <value>
                <fullName>SalesForce Improvements or Research</fullName>
                <isActive>false</isActive>
                <label>SalesForce Improvements 1or Research</label>
            </value>
            <value>
                <fullName>TaskRay</fullName>
                <isActive>false</isActive>
                <label>TaskRay</label>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>