force-app/main/default/objects/Case/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>To add the date/time and updates with your name, use the &quot;enter new comment&quot; field above. This one will automatically update from that field w/your name, date and text entered.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>