force-app/main/default/objects/Case/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <inlineHelpText>Enter all software/systems impacted by this request.</inlineHelpText>
    <label>Component</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dude</fullName>
            </value>
            <value>
                <fullName>ETL</fullName>
            </value>
            <value>
                <fullName>ITR</fullName>
            </value>
            <value>
                <fullName>LPnotificationator</fullName>
            </value>
            <value>
                <fullName>MRMT</fullName>
            </value>
            <value>
                <fullName>Ninja</fullName>
            </value>
            <value>
                <fullName>Opportunity Finder</fullName>
            </value>
            <value>
                <fullName>Red-Over-Red</fullName>
            </value>
            <value>
                <fullName>Release Playbook</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Spectrum Status</fullName>
            </value>
            <value>
                <fullName>Splat600</fullName>
            </value>
            <value>
                <fullName>Squirrel</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>TV Study</fullName>
            </value>
            <value>
                <fullName>Voight-Kampff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>