force-app/main/default/objects/Case/fields/Created_By_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Current_User__c</fullName>
    <formula>$User.Id = CreatedBy.Id</formula>
    <inlineHelpText>Used to show if you have created this ticket</inlineHelpText>
    <label>Created By Current User</label>
    <type>Checkbox</type>
</CustomField>