force-app/main/default/objects/Case/fields/Date_Time_Closed_MB__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Closed_MB__c</fullName>
    <label>Date/Time Closed MB</label>
    <type>DateTime</type>
</CustomField>