force-app/main/default/objects/Case/fields/Days_Since_Last_Comment__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Comment__c</fullName>
    <formula>TODAY()- Enter_comments_date_changed__c</formula>
    <inlineHelpText>Number showing how long it has been since comment was updated. SLA for ticket response is within 1 business day for 90% of all tickets.</inlineHelpText>
    <label>Days Since Last Comment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>