force-app/main/default/objects/Case/fields/Enter_comments_date_changed__c.field-meta.xml
<CustomField>
    <fullName>Enter_comments_date_changed__c</fullName>
    <inlineHelpText>Hidden field, used to auto populate Last changed date (For phase transition comments)</inlineHelpText>
    <label>Enter comments date changed</label>
    <type>Date</type>
</CustomField>