force-app/main/default/objects/Case/fields/Enter_Long_Comment_here__c.field-meta.xml
<CustomField>
    <fullName>Enter_Long_Comment_here__c</fullName>
    <inlineHelpText>Longer comment for intake reqs, should allow for rich text and formatting. used in Case PB</inlineHelpText>
    <label>Enter Long Comment here</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>