force-app/main/default/objects/Case/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <inlineHelpText>Category of the request.</inlineHelpText>
    <label>Epic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliance_Issues</fullName>
                <label>Compliance Issues</label>
            </value>
            <value>
                <fullName>Business Support</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Opportunity Identification</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>