force-app/main/default/objects/Case/fields/Existing_Utility_Meter__c.field-meta.xml
<CustomField>
    <fullName>Existing_Utility_Meter__c</fullName>
    <label>Existing Utility Meter</label>
    <length>50</length>
    <type>Text</type>
</CustomField>