force-app/main/default/objects/Case/fields/Forecasted_Disconnection_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Disconnection_Date__c</fullName>
    <label>Forecasted Disconnection Date</label>
    <type>Date</type>
</CustomField>