force-app/main/default/objects/Case/fields/Internal_Comment__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comment__c</fullName>
    <description>This field is for internal comments by Admins to resolve the Item</description>
    <inlineHelpText>This field is for internal comments by Admins to resolve the Item</inlineHelpText>
    <label>Internal Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>