force-app/main/default/objects/Case/fields/JIRA_Issue_ID__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Issue_ID__c</fullName>
    <inlineHelpText>Enter from the JIRA issue.  The ID is a number found when you mouse over the &quot;EDIT&quot; button on an issue in JIRA a url appears at the bottom left of the page with the ID number at the end of the URL following the &quot;id=&quot;.</inlineHelpText>
    <label>JIRA Issue ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>