force-app/main/default/objects/Case/fields/JIRA_Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Issue_Key__c</fullName>
    <inlineHelpText>Format of the type SIXMHZ-531</inlineHelpText>
    <label>JIRA Issue Key</label>
    <length>32</length>
    <type>Text</type>
</CustomField>