force-app/main/default/objects/Case/fields/Jira_Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>Jira_Issue_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter the number of the Jira Issue here.</inlineHelpText>
    <label>Jira Issue Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>