force-app/main/default/objects/Case/fields/JIRA_Link__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Link__c</fullName>
    <formula>CASE(Jira_Issue_Number__c ,0, &quot;NA&quot;, 
HYPERLINK(&quot;https://jira.t-mobile.com/browse/SIXMHZ-&quot; &amp; (TEXT( Jira_Issue_Number__c)),&quot;LINK&quot;))</formula>
    <label>JIRA Link</label>
    <type>Text</type>
</CustomField>