force-app/main/default/objects/Case/fields/JIRA_Parent_Issue_ID_Sub_Tasks_Only__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Parent_Issue_ID_Sub_Tasks_Only__c</fullName>
    <inlineHelpText>Enter from the JIRA parent issue. The ID is a number found when you mouse over the &quot;EDIT&quot; button on an issue in JIRA a url appears at the bottom left of the page with the ID number at the end of the URL following the &quot;id=&quot;.</inlineHelpText>
    <label>JIRA Parent Issue ID (Sub-Tasks Only)</label>
    <length>16</length>
    <type>Text</type>
</CustomField>