force-app/main/default/objects/Case/fields/New_Data_Analysis_Issue_Instructions__c.field-meta.xml
<CustomField>
    <fullName>New_Data_Analysis_Issue_Instructions__c</fullName>
    <formula>HYPERLINK( &quot;https://na59.salesforce.com/sfc/p/f40000001xI1/a/f4000000cC6h/A7eu9SAlhzO8IHuPntXJdsMOsAKLaDpvbAD3yeUSD9c&quot;,&quot;Process Steps&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Step by Step Instructions for when the case results in an issue being opened in JIRA.</inlineHelpText>
    <label>New Data Analysis Issue Instructions</label>
    <type>Text</type>
</CustomField>