force-app/main/default/objects/Case/fields/NT_ID__c.field-meta.xml
<CustomField>
    <fullName>NT_ID__c</fullName>
    <inlineHelpText>Enter your NT ID to gain access to the 600 MHz Interference Viz</inlineHelpText>
    <label>NT ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>