force-app/main/default/objects/Case/fields/Placeholder_comment_long__c.field-meta.xml
<CustomField>
    <fullName>Placeholder_comment_long__c</fullName>
    <label>Placeholder comment long</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>