force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <inlineHelpText>Please enter the request type for this new case.</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Analysis</fullName>
                <color>#0B6FCE</color>
                <label>Data Analysis</label>
            </value>
            <value>
                <fullName>Spectrum Clearing Inbox/Intake</fullName>
                <color>#A845DC</color>
                <label>Spectrum Clearing Inbox/Intake</label>
            </value>
            <value>
                <fullName>Salesforce</fullName>
                <color>#78C953</color>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#E27001</color>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>