force-app/main/default/objects/Case/fields/Requester_Group__c.field-meta.xml
<CustomField>
    <fullName>Requester_Group__c</fullName>
    <inlineHelpText>Enter the group that requested this functionality.</inlineHelpText>
    <label>Requester Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Divest &amp; Decomm</fullName>
            </value>
            <value>
                <fullName>Deconstruction</fullName>
            </value>
            <value>
                <fullName>Lease Negotiation (&amp; Related)</fullName>
            </value>
            <value>
                <fullName>Safety Management (Incidents)</fullName>
            </value>
            <value>
                <fullName>2.5</fullName>
            </value>
            <value>
                <fullName>Admins</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Due Diligence</fullName>
            </value>
            <value>
                <fullName>Data Analytics</fullName>
            </value>
            <value>
                <fullName>Clearing Administration</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Spectrum Engineering</fullName>
            </value>
            <value>
                <fullName>Outreach Team</fullName>
            </value>
            <value>
                <fullName>Govt. Affairs</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>