force-app/main/default/objects/Case/fields/Responded_within_24_hours__c.field-meta.xml
<CustomField>
    <fullName>Responded_within_24_hours__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to track time to respond for tickets.</inlineHelpText>
    <label>Responded within 24 hours</label>
    <type>Checkbox</type>
</CustomField>