force-app/main/default/objects/Case/fields/Source_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Case_Number__c</fullName>
    <label>Source Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>