force-app/main/default/objects/Case/fields/Source_Parent_Case_Number_MB__c.field-meta.xml
<CustomField>
    <fullName>Source_Parent_Case_Number_MB__c</fullName>
    <label>Source Parent Case Number MB</label>
    <length>50</length>
    <type>Text</type>
</CustomField>