force-app/main/default/objects/Case/fields/Source_Status__c.field-meta.xml
<CustomField>
    <fullName>Source_Status__c</fullName>
    <label>Source Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>New-Submitted</fullName>
            </value>
            <value>
                <fullName>RFP Creation</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>RFP In Progress</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Waiting Approval</fullName>
            </value>
            <value>
                <fullName>Pending Additional Information</fullName>
            </value>
            <value>
                <fullName>Vendor Negotiation</fullName>
            </value>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>Redlining</fullName>
            </value>
            <value>
                <fullName>Contract Generation</fullName>
            </value>
            <value>
                <fullName>Pending Site Surveys</fullName>
            </value>
            <value>
                <fullName>Pending Contract</fullName>
            </value>
            <value>
                <fullName>BTS Request Approval</fullName>
            </value>
            <value>
                <fullName>Vendor Review</fullName>
            </value>
            <value>
                <fullName>Accepted - BTS In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Closed - Sent to OM</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Implemented</fullName>
            </value>
            <value>
                <fullName>Deployment Ready</fullName>
            </value>
            <value>
                <fullName>OM Ready</fullName>
            </value>
            <value>
                <fullName>OM - On Hold</fullName>
            </value>
            <value>
                <fullName>OM - Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>