force-app/main/default/objects/Case/fields/Sprint_Status__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Status__c</fullName>
    <label>Sprint Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>