force-app/main/default/objects/Case/fields/Task_Number_MB__c.field-meta.xml
<CustomField>
    <fullName>Task_Number_MB__c</fullName>
    <label>Task Number MB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>