force-app/main/default/objects/Case/fields/Tool_you_need_access_too__c.field-meta.xml
<CustomField>
    <fullName>Tool_you_need_access_too__c</fullName>
    <description>Select multiple by holding CTRL and clicking the desired fields.</description>
    <label>Request Access To:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market Request Website- Create, View, Edit existing tickets</fullName>
            </value>
            <value>
                <fullName>Interference Viz-</fullName>
                <label>Interference Viz- Dashboard showing TV Broadcasters &amp; Sites</label>
            </value>
            <value>
                <fullName>Illegally Transmitting Reports viz (ITR) -</fullName>
                <label>Illegally Transmitting Reports Viz/Dashboard  (ITR)</label>
            </value>
            <value>
                <fullName>Other (update description with tool URL or information you need access to</fullName>
                <label>Other (update description with tool URL or information you need access to)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>