force-app/main/default/objects/Case/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Enter the type of work.  Corresponds to JIRA with Other for non-JIRA issues.</inlineHelpText>
    <label>Jira Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Story</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Sub-task</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>