force-app/main/default/objects/Case/fields/Utility_Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Utility_Confirmation_Number__c</fullName>
    <label>Utility Confirmation Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>