force-app/main/default/objects/Case/fields/Utility_Meter__c.field-meta.xml
<CustomField>
    <fullName>Utility_Meter__c</fullName>
    <label>Utility Meter #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>