force-app/main/default/objects/Case/fields/Work_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Work_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in Agile Accelerator</description>
    <inlineHelpText>Used in Agile Accelerator</inlineHelpText>
    <label>Work Lookup</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Intake Requests (Cases) (Work Lookup)</relationshipLabel>
    <relationshipName>Intake_Requests_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>