force-app/main/default/objects/Case/fields/Workflow_Template_MB__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Template_MB__c</fullName>
    <label>Workflow Template MB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>