force-app/main/default/objects/Case/fields/Your_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Your_Email_Address__c</fullName>
    <inlineHelpText>Must be a T-Mobile Email to gain access.</inlineHelpText>
    <label>Your Email Address</label>
    <type>Email</type>
</CustomField>