force-app/main/default/objects/Case/recordTypes/Intake_Request.recordType-meta.xml
<RecordType>
    <fullName>Intake_Request</fullName>
    <active>true</active>
    <businessProcess>Request Intake</businessProcess>
    <description>Tracks requests for the Spectrum Clearing Team</description>
    <label>Intake Request</label>
</RecordType>