force-app/main/default/objects/Case/recordTypes/PPD_Utility.recordType-meta.xml
<RecordType>
    <fullName>PPD_Utility</fullName>
    <active>true</active>
    <businessProcess>PPD Utility</businessProcess>
    <description>For Salesforce to Salesforce Connection with PPD</description>
    <label>PPD Utility</label>
</RecordType>