force-app/main/default/objects/Case/recordTypes/Utility_Shutoff_MB.recordType-meta.xml
<RecordType>
    <fullName>Utility_Shutoff_MB</fullName>
    <active>true</active>
    <businessProcess>PPD Utility</businessProcess>
    <description>Used to get the Backhaul information from PPD Org</description>
    <label>UtilityShutoff MB</label>
</RecordType>